# ChangeLog for x11-drivers/nvidia-drivers
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.464 2013/06/26 11:45:37 jer Exp $

*nvidia-drivers-319.32 (26 Jun 2013)

  26 Jun 2013; Jeroen Roovers <jer@gentoo.org> +nvidia-drivers-319.32.ebuild:
  Version bump.

  09 Jun 2013; Jeroen Roovers <jer@gentoo.org> -nvidia-drivers-319.17.ebuild,
  nvidia-drivers-319.23.ebuild:
  Stable for AMD64 x86 too.

  27 May 2013; Jeroen Roovers <jer@gentoo.org> -nvidia-drivers-310.44.ebuild,
  nvidia-drivers-310.51.ebuild:
  Stable for AMD64 x86 too.

  26 May 2013; Jeroen Roovers <jer@gentoo.org> nvidia-drivers-319.17.ebuild:
  Stable for AMD64 X86 too.

*nvidia-drivers-319.23 (23 May 2013)

  23 May 2013; Jeroen Roovers <jer@gentoo.org> +nvidia-drivers-319.23.ebuild:
  Version bump.

  13 May 2013; Jeroen Roovers <jer@gentoo.org>
  -nvidia-drivers-173.14.36.ebuild, nvidia-drivers-173.14.37.ebuild:
  Stable for AMD64 X86 (bug #467364).

  10 May 2013; Jeroen Roovers <jer@gentoo.org> nvidia-drivers-310.51.ebuild:
  Update compatible kernel version.

*nvidia-drivers-310.51 (10 May 2013)

  10 May 2013; Jeroen Roovers <jer@gentoo.org> +nvidia-drivers-310.51.ebuild:
  Version bump.

  09 May 2013; Jeroen Roovers <jer@gentoo.org> files/nvidia-smi.init:
  Fix pid file path.

  09 May 2013; Jeroen Roovers <jer@gentoo.org> nvidia-drivers-304.88.ebuild,
  nvidia-drivers-310.44.ebuild, nvidia-drivers-313.30.ebuild,
  nvidia-drivers-319.17.ebuild:
  Clean up and shorten SRC_URI.

  03 May 2013; Jeroen Roovers <jer@gentoo.org> nvidia-drivers-319.17.ebuild:
  Update kernel version compatibility.

  03 May 2013; Jeroen Roovers <jer@gentoo.org> -nvidia-drivers-319.12.ebuild:
  Old beta.

*nvidia-drivers-319.17 (03 May 2013)

  03 May 2013; Jeroen Roovers <jer@gentoo.org> +nvidia-drivers-319.17.ebuild:
  Version bump.

  01 May 2013; Jeroen Roovers <jer@gentoo.org> nvidia-drivers-96.43.23.ebuild,