@@ -44,13 +44,13 @@ EBUILD nvidia-drivers-310.51.ebuild 12847 SHA256 fcc8d84e58e68f8373fb62bb7859329
 EBUILD nvidia-drivers-313.30.ebuild 12778 SHA256 bcd8b36dea24ef82754ddd1f5f51cb3e73c63d964dcf5991490e169e1c132705 SHA512 f0ee73efa58245a13047547315eb75ad363248a33ae9b6115df0a022877a7ac20498ae947dd0365d3f338544cd4d7de691b6f958323a1b29fd3187b16ee7e20d WHIRLPOOL 4940d2bb6f4685df0d8f126e13ab0ac6b75199faf16e845a070b3dc358c94d7e15941f1835017ee0334fc8d0dab10df0a54387c4d13655c3166c6d4765975f91
 EBUILD nvidia-drivers-319.23.ebuild 12694 SHA256 48b18143bb199737828d235b786ec169d9be989ca40e67a90a2452d07015fba0 SHA512 57af0256c0123ec7884710ce2a50ff55cf2005ae487ff5fb068c3f9e9620e86eb7a452c92cc8379d0f03ae45c7e606a518c4a2158f77ce207ec44021f575262b WHIRLPOOL 8504f79fb956460446456fe186694c1bab528cabbf9060a3180880f7d5ed6ecd5217a191e81a0d8fe46d285eb925f5e8057eaa9ea3022fc256bd18c0f61eb0d2
 EBUILD nvidia-drivers-319.32.ebuild 12867 SHA256 dd4b78a8382093160baa80fae59abc83f73c4aa73de577e1e1b7808a777dc1f3 SHA512 95982a751024fc8865d5cd71f066ee97e1fa1d6baf45b697a3c5fe9bbdac1f319e01ecaf0ac0e340fe1b83acd8476d3ddde485d7ca5db62191636c559e144390 WHIRLPOOL 5c0c2fd521bf881c8c1e9c66d7dd34b5dbabacf4b3b8256e3fcb0f15efab337ba64ef80d5c6170aa75b866666dd936d78ef17c0527d188eb5907ca6e09d6fc35
-EBUILD nvidia-drivers-96.43.23.ebuild 15936 SHA256 95599e2f2d562c694fa1899d4084ef8588dbe9a1b96a07d98de55953c64ee2f4 SHA512 52ea2ff380fc96ab4cb59e86fe3bf3756285717aeeb92c4866e53e8063e56aad457dd3dcf93f9ff8d2f9646e325975de170d1bc46d5db0a81a17a62b20bbeccd WHIRLPOOL ef0afbb97c4b8708ed1270a0310d1cd2f81e678549d990900f9a22220e88c656d6660b0eeb66ae6360fcc3e12651ade68b3df550832c3e0cbb77221ba7312353
-MISC ChangeLog 95759 SHA256 5881f03ae41fe2b45d44bfb549026ea96c970894bbc896440dcfe6d377811bd5 SHA512 a8e5aa436f6d9080206cb4c549bfbd08fa736e4bd3f5111924064a262e048826af19b2d8e570e263214851acc63d61e396c0c1e60eb421d45d2cc25d8bd65606 WHIRLPOOL 5964e8909ec4a7fdc629ed7525285057ee9ef4152d746904c18efa61c106477a9cb36572327abea46646ee6e840598f702a925b7ac4872d87d6d15674c06dbcf
+EBUILD nvidia-drivers-96.43.23.ebuild 15420 SHA256 5eb46ceb1a716b4950a29faf9b16256bc30529332eaa7ef19d7b0995f61fca3b SHA512 a9de6ae76f765c1acf450bae303e3a32e28a2e0472f242d997b5310583efb4c8cb28f463c18d1c0e90c7439bd6060b10a53fc7665bf02e6f682ad1de8ba190bf WHIRLPOOL 33f02de8c92e4d5726b7656a5daa57952469069a430c10e25a8bb95caaa0068a88ad45b03e468a78cd6e4149741a55971c6a33033ebec60e3cd47debccac8e99
+MISC ChangeLog 95851 SHA256 c7d8c808d4f4c2c58b399ba116f95b03daddf343fa5560471e7e85fbfefef11b SHA512 ed218a72782ed38cfefb56071bec0c495023185980627b864f151f17d5d494d2cefadfc2e5434a1db7cddd9c96bd438f9d096d1975ae1dc8921a529c8bc07343 WHIRLPOOL c7e41a7120f082a6babd80bcd10690d35dcadd5814029dbfb8b326e7d8c47e06d0a898c7ed47a9297194b35352d1b61d6eb5009b4c14d5fd2371761c2777bc1e
 MISC metadata.xml 678 SHA256 02f45452a129ba14ad5ef0f6bf0031887aead328a7bfaa6977949bc6e8969e61 SHA512 dfc9494e01db7ee3e7ef64dc67c5e26b1a3b0c90ed2850f75c904a76a11df8b3cb137959fe471c788b7a33f555090a9c764af5cfff7f24253127484d4e518e84 WHIRLPOOL 2940677faa8b8183237d9797025079a68164584d2afd09b6e3846cdbbd5824f3c56da545b2f7d1c7d1e72746f540048e4256bde939a28ac785fa598ee2017abd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHK1GMACgkQVWmRsqeSphPWyQCeLDoEmf3BIACAdpbPdMSKWecH
-VNkAn0CtsHvGdm6/Z/9f7ydh8SIldfov
-=R0xh
+iEYEAREIAAYFAlHK11QACgkQVWmRsqeSphOdPgCaA3T5dQeriSGlKDeBNMiwpUxZ
+cRQAnibPdMfX5f3o2U/1EkSu0lS3FeHM
+=6g4p
 -----END PGP SIGNATURE-----
